# icp-rust-workshop

./: .gitignore  README.md
motoko_workshop/: .env  README.md
motoko_workshop/src/declarations/motoko_tutorial_backend/: motoko_tutorial_backend.did  motoko_tutorial_backend.did.js
motoko_workshop/src/motoko_tutorial_backend/: main.mo
rust_workshop/: README.md  package-lock.json  package.json
rust_workshop/src/qrcode_backend/: Cargo.toml  qrcode_backend.did
rust_workshop/src/qrcode_backend/src/: core.rs  lib.rs
rust_workshop/src/qrcode_frontend/src/: index.html  index.js
